force-app/main/default/objects/Sales_Credit__c/fields/Team_LL_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Team_LL_Revenue__c</fullName>
    <formula>IF( ISBLANK( LL_Revenue_Credit_Override__c ) , 
Opportunity__r.LL_Monthly_Revenue__c * Team_Credit_Portion__c , 
LL_Revenue_Credit_Override__c * Team_Credit_Portion__c )</formula>
    <label>Team LL Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>