force-app/main/default/objects/Sales_Credit__c/fields/Team_Revenue_Credit__c.field-meta.xml
<CustomField>
    <fullName>Team_Revenue_Credit__c</fullName>
    <formula>IF( ISBLANK( Total_Revenue_Credit_Override__c ) , 
 (Opportunity__r.Monthly_Revenue__c - Opportunity__r.HG_Monthly_Revenue__c) * Team_Credit_Portion__c + Team_HG_Revenue__c , 
Total_Revenue_Credit_Override__c * Team_Credit_Portion__c )</formula>
    <label>Team Revenue Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>