force-app/main/default/objects/Sales_Credit__c/fields/Team_SRSR_Credit__c.field-meta.xml
<CustomField>
    <fullName>Team_SRSR_Credit__c</fullName>
    <formula>IF( Team_SRSR_Revenue__c &gt; 0 , Team_Credit_Portion__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team SRSR Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>