force-app/main/default/objects/Sales_Credit__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>Opportunity__r.Vertical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>