force-app/main/default/objects/Sales_Credit__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Credits (VP)</relationshipLabel>
    <relationshipName>Sales_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>