force-app/main/default/objects/Sales_Credit__c/fields/VP_Target__c.field-meta.xml
<CustomField>
    <fullName>VP_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Target of the VP</description>
    <label>VP Target</label>
    <referenceTo>Sales_Target__c</referenceTo>
    <relationshipLabel>Sales Credits (VP Target)</relationshipLabel>
    <relationshipName>Sales_Credits2</relationshipName>
    <type>Lookup</type>
</CustomField>