force-app/main/default/objects/Sales_Credit__c/fields/Weighted_MSF_Team__c.field-meta.xml
<CustomField>
    <fullName>Weighted_MSF_Team__c</fullName>
    <formula>if( Opportunity__r.Invoiced_MSF__c = 0, Opportunity__r.MSFPrice__c * Team_Credit_Portion__c , Opportunity__r.Invoiced_MSF__c * Team_Credit_Portion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted MSF-Team</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>