force-app/main/default/objects/Sales_Credit__c/fields/Weighted_SF_Rep__c.field-meta.xml
<CustomField>
    <fullName>Weighted_SF_Rep__c</fullName>
    <formula>if( Opportunity__r.Invoiced_MSF__c = 0, Opportunity__r.SFPrice__c * Individual_Credit_Portion__c , Opportunity__r.Invoiced_SF__c * Individual_Credit_Portion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted SF-Rep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>