force-app/main/default/objects/Sales_Credit__c/validationRules/Locked_After_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Locked_After_Closed_Won</fullName>
    <active>false</active>
    <description>Record locked after Closed Won</description>
    <errorConditionFormula>AND(NOT(OR($Profile.Name = &#39;System Administrator&#39;, $Profile.Name = &#39;Sales Administrator&#39;)),  ISPICKVAL(Opportunity__r.StageName, &#39;Closed Won&#39;))</errorConditionFormula>
    <errorMessage>The record is locked because the Opportunity is Closed Won.  Please contact Sales Ops.</errorMessage>
</ValidationRule>