force-app/main/default/objects/Sales_Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscriber_ID__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contract_Signed_Date__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Individual_Credit_Portion__c</columns>
    <columns>Manager__c</columns>
    <columns>Team_Credit_Portion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>VP__c</columns>
    <columns>Days_to_Activate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
        <value>eric</value>
    </filters>
    <label>All</label>
</ListView>