force-app/main/default/objects/Sales_Credit__c/listViews/Sales_Credits_without_VP.listView-meta.xml
<ListView>
    <fullName>Sales_Credits_without_VP</fullName>
    <columns>NAME</columns>
    <columns>Subscriber_ID__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contract_Signed_Date__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Individual_Credit_Portion__c</columns>
    <columns>Manager__c</columns>
    <columns>Team_Credit_Portion__c</columns>
    <columns>VP__c</columns>
    <columns>VP_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Contract_Signed_Date__c</field>
        <operation>equals</operation>
        <value>N_MONTHS_AGO:3</value>
    </filters>
    <label>Sales Credits without VP</label>
</ListView>